--- a/process.scss
+++ b/process.scss
@@ -32,6 +32,10 @@ h1 {
   margin: 0;
 }
 
+.border {
+  border: 2px solid black;
+}
+
 .container {
   width: 100%;
   margin-top: 20px;
@@ -171,6 +175,7 @@ input:checked + .select {
 }
 
 .media {
+  position: relative;
   flex: 1 0 auto;
   max-width: 800px;
   margin-left: 40px;
@@ -189,7 +194,6 @@ input:checked + .select {
 .audio_container,
 .mov_container,
 .text_container {
-  border: 2px solid black;
   display: flex;
   :first-child {
     //background-color: lightblue ;
@@ -200,47 +204,122 @@ canvas {
   width: 100%;
   height: 100%;
 }
-.audio_container {
-  height: 72px;
-}
 
 .audio,
 .mov,
 .text {
-  outline: 2px solid black;
   flex: 1 0 0;
+  max-width: 100%;
 }
 
 .mov_container {
-  min-height: 36px;
+  z-index: -1;
+  height: 454px;
+  position: absolute;
+  width: 100%;
+  top: 56px;
+  overflow: hidden;
 }
 
+.mov_container.small {
+  height: 229px;
+  border: none;
+}
 .mov {
-  height: 450px;
+  height: 100%;
+  width: 100%;
 }
 
 .mov.small {
-  height: 225px;
+  width: 50%;
 }
+
+video {
+  position: relative !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 
 .text_container {
   min-height: 36px;
-  background-color: white;
-
 }
 
 .text {
-  background-color: white;
-
-  font-size: 1.6rem;
-  font-weight: 300;;
+  font-size: 2rem;
+  font-weight: 400;
   &#text_1 {
-    font-size: 6rem;
-    font-weight: 400;
+    backdrop-filter: none;
+    background-color: transparent;
+    font-size: 2rem;
   }
   padding: 20px;
   min-height: 36px;
   p {
     text-align: left;
+  }
+}
+
+.text_container,
+.audio_container {
+  border: none;
+  margin: 0;
+}
+.audio {
+  margin: 20px 0;
+}
+.animate_audio {
+  height: 72px;
+  width: 72px;
+  max-width: 72px;
+  border-radius: 36px;
+  margin: 0 auto;
+}
+
+.audio_0 {
+  background: linear-gradient(-120deg, #ee7752, #e73c7e, #23a6d5, #00ff00);
+  animation: gradient_0 2S ease infinite;
+  background-size: 400% 400%;
+}
+
+.audio_1 {
+  background: linear-gradient(-212deg, #00ff00, #e73c7e,#23a6d5, #ee7752);
+  animation: gradient_1 2S ease infinite;
+  background-size: 400% 400%;
+}
+
+@keyframes gradient_0 {
+    0% {
+        background-position: 0% 20%;
+    }
+    25% {
+        background-position: 82% 12%;
+    }
+    50% {
+        background-position: 70% 80%;
+    }
+    75% {
+        background-position: 40% 12%;
+    }
+    100% {
+        background-position: 0% 20%;
+    }
+}
+
+@keyframes gradient_1 {
+  0% {
+      background-position: 10% 90%;
+  }
+  25% {
+      background-position: 40% 4%;
+  }
+  50% {
+      background-position: 90% 4%;
+  }
+  75% {
+      background-position: 50% 60%;
+  }
+  100% {
+      background-position: 10% 90%;
   }
 }
