--- a/styles/process.css
+++ b/styles/process.css
@@ -25,7 +25,8 @@ h1 {
   margin: 0; }
 
 .border {
-  border: 2px solid black; }
+  border: 2px solid black;
+  height: 156px !important; }
 
 .container {
   width: 100%;
@@ -39,13 +40,16 @@ h1 {
 
 header {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: baseline;
   width: 100%; }
 
 header > * {
   margin-left: 10px;
   margin-right: 10px; }
+
+h1 {
+  margin-left: 220px; }
 
 .controls {
   width: 180px;
@@ -122,7 +126,7 @@ input:checked + .toggle {
   right: 0;
   width: 100%;
   height: 100%;
-  border-radius: 15px;
+  border-radius: 20px;
   background-color: transparent;
   border: 2px solid black;
   transition: all 0.1s ease; }
@@ -134,7 +138,7 @@ input:checked + .toggle {
     transform: scale(0);
     width: 26px;
     height: 26px;
-    border-radius: 12px;
+    border-radius: 13px;
     background-color: #00ff00;
     border: 4px solid white;
     transition: all 0.1s ease; }
@@ -157,7 +161,31 @@ input:checked + .select {
 
 .state_container {
   height: 36px;
-  background-color: lightgray; }
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .state_container :last-child {
+    margin-right: 0px; }
+
+.state {
+  width: 30px;
+  height: 30px;
+  border: 2px solid black;
+  border-radius: 50%;
+  margin: 20px;
+  position: relative; }
+  .state.active {
+    border-color: #00ff00; }
+    .state.active:after {
+      content: "";
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      width: 26px;
+      height: 26px;
+      border-radius: 13px;
+      background-color: #00ff00;
+      border: 4px solid white; }
 
 .audio_container,
 .mov_container,
@@ -177,10 +205,8 @@ canvas {
 .mov_container {
   z-index: -1;
   height: 454px;
-  position: absolute;
-  width: 100%;
-  top: 56px;
-  overflow: hidden; }
+  overflow: hidden;
+  margin-bottom: 0px; }
 
 .mov_container.small {
   height: 229px;
@@ -202,24 +228,24 @@ video {
   min-height: 36px; }
 
 .text {
-  font-size: 2rem;
+  font-size: 1.6rem;
+  padding: 10px 40px 0 0;
   font-weight: 400;
-  padding: 20px;
   min-height: 36px; }
   .text#text_1 {
     backdrop-filter: none;
-    background-color: transparent;
-    font-size: 2rem; }
+    background-color: transparent; }
   .text p {
     text-align: left; }
 
-.text_container,
 .audio_container {
   border: none;
-  margin: 0; }
+  margin: 0;
+  width: 100%; }
 
 .audio {
-  margin: 20px 0; }
+  height: 36px;
+  overflow: visible; }
 
 .animate_audio {
   height: 72px;
@@ -229,35 +255,29 @@ video {
   margin: 0 auto; }
 
 .audio_0 {
-  background: linear-gradient(-120deg, #ee7752, #e73c7e, #23a6d5, #00ff00);
-  animation: gradient_0 2S ease infinite;
-  background-size: 400% 400%; }
+  background: -webkit-linear-gradient(315deg, #f99e1f 0%, rgba(249, 158, 31, 0) 70%), -webkit-linear-gradient(65deg, #00ff00 10%, rgba(13, 242, 89, 0) 80%), -webkit-linear-gradient(135deg, #0643f9 15%, rgba(6, 67, 249, 0) 80%), -webkit-linear-gradient(205deg, #ff1a66 100%, rgba(255, 26, 102, 0) 70%);
+  background: linear-gradient(135deg, #f99e1f 0%, rgba(249, 158, 31, 0) 70%), linear-gradient(25deg, #00ff00 10%, rgba(13, 242, 89, 0) 80%), linear-gradient(315deg, #0643f9 15%, rgba(6, 67, 249, 0) 80%), linear-gradient(245deg, #ff1a66 100%, rgba(255, 26, 102, 0) 70%);
+  animation: gradient 2S ease infinite;
+  background-size: 300% 300%; }
 
 .audio_1 {
-  background: linear-gradient(-212deg, #00ff00, #e73c7e, #23a6d5, #ee7752);
+  background: -webkit-linear-gradient(315deg, #00ff00 0%, rgba(174, 240, 6, 0) 70%), -webkit-linear-gradient(65deg, #db0843 10%, rgba(219, 8, 67, 0) 80%), -webkit-linear-gradient(135deg, #03f4df 15%, rgba(3, 244, 223, 0) 80%), -webkit-linear-gradient(205deg, #00ff00 100%, rgba(43, 244, 10, 0) 70%);
+  background: linear-gradient(135deg, #00ff00 0%, rgba(174, 240, 6, 0) 70%), linear-gradient(25deg, #db0843 10%, rgba(219, 8, 67, 0) 80%), linear-gradient(315deg, #03f4df 15%, rgba(3, 244, 223, 0) 80%), linear-gradient(245deg, #00ff00 100%, rgba(43, 244, 10, 0) 70%);
   animation: gradient_1 2S ease infinite;
-  background-size: 400% 400%; }
+  background-size: 300% 300%; }
 
-@keyframes gradient_0 {
+@keyframes gradient {
   0% {
-    background-position: 0% 20%; }
-  25% {
-    background-position: 82% 12%; }
+    background-position: 50% 50%; }
   50% {
-    background-position: 70% 80%; }
-  75% {
-    background-position: 40% 12%; }
+    background-position: 100% 50%; }
   100% {
-    background-position: 0% 20%; } }
+    background-position: 50% 50%; } }
 
 @keyframes gradient_1 {
   0% {
-    background-position: 10% 90%; }
-  25% {
-    background-position: 40% 4%; }
+    background-position: 100% 50%; }
   50% {
-    background-position: 90% 4%; }
-  75% {
-    background-position: 50% 60%; }
+    background-position: 0% 100%; }
   100% {
-    background-position: 10% 90%; } }
+    background-position: 100% 50%; } }
