--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,6 +1,6 @@
 .container.svelte-17zhl51{height:100%;display:flex;flex-direction:row-reverse;background-color:black;overflow:hidden}.inner-container.svelte-17zhl51{width:299px;min-width:299px;max-width:299px;background-color:black;height:100%;border-right:1px solid white;display:flex;flex-direction:column;justify-content:space-between;overflow-y:auto}main.svelte-17zhl51{flex-grow:1}nav.svelte-17zhl51{height:100%}section.svelte-17zhl51{padding:1rem 0.4rem 1rem 1.2rem}
 #container.svelte-l2p2d{display:flex;flex-direction:column;align-items:center;justify-content:center}
 h3.svelte-1w7mwa7.svelte-1w7mwa7{margin-right:3em;margin-bottom:1em;padding-top:1em;border-top:1px solid white;color:white}p.svelte-1w7mwa7.svelte-1w7mwa7{color:white;margin-top:0}p.svelte-1w7mwa7+p.svelte-1w7mwa7{margin-bottom:0}
-h3.svelte-t8bcr3.svelte-t8bcr3{margin-left:1em;margin-bottom:0;margin-top:2em;color:white}li.svelte-t8bcr3.svelte-t8bcr3{color:white;user-select:none;line-height:200%;position:relative}li.active.svelte-t8bcr3 span.svelte-t8bcr3{background-color:white;color:black}li.svelte-t8bcr3.svelte-t8bcr3:hover{cursor:pointer}
+h3.svelte-n6rrgi.svelte-n6rrgi{margin-left:1em;margin-bottom:0;margin-top:2em;color:white;user-select:none}li.svelte-n6rrgi.svelte-n6rrgi{color:white;user-select:none;line-height:200%;position:relative}li.active.svelte-n6rrgi span.svelte-n6rrgi{background-color:white;color:black}li.svelte-n6rrgi.svelte-n6rrgi:hover{cursor:pointer}
 
 /*# sourceMappingURL=bundle.css.map */
