--- a/public/global.css
+++ b/public/global.css
@@ -5,4 +5,5 @@ body {
 	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
+	overflow-y: hidden;
 }
